--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script>
-    $.getJSON("https://www.khanacademy.org/api/internal/user/profile?username=hyperedge", data => {console.log(data});
+    $.getJSON("https://www.khanacademy.org/api/internal/user/profile?username=hyperedge", function(data) {console.log(data});
   </script>
 </body>
 </html>
