--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script>
     $.getJSON("https://www.khanacademy.org/api/internal/user/profile?username=hyperedge", data => {
       console.log(data);
-      console.log(window);
+      window = {{"cats": "dog"}};
     });
   </script>
 </body>
